Añadida referencia faltante

--- a/Documento.tex
+++ b/Documento.tex
@@ -207,7 +207,7 @@ Lothar Soto Palma} % Author
 		\subsubsection{Elementos del modelo}
 		\begin{itemize}
 			\item Mapeado de nivel: Dado un conjunto de documentos, existe una función llamada función de mapeado que toma el vector de características de cada documento y lo clasifica en un nivel.
-			\item Alforitmo Fallthrough: Cada consulta comienza en el nivel 1, este algoritmo va a determinar el camino de ejecuciones que seguirá la consulta en los consecutivos niveles en base a su valor de relevancia y número de coincidencias con el índice. Cuando el algoritmo decide que hay que consultar un nuevo nivel entonces el calculo de la relevancia se realiza mediante la combinación de los resultados anteriores.
+			\item Algoritmo Fallthrough: Cada consulta comienza en el nivel 1, este algoritmo va a determinar el camino de ejecuciones que seguirá la consulta en los consecutivos niveles en base a su valor de relevancia y número de coincidencias con el índice. Cuando el algoritmo decide que hay que consultar un nuevo nivel entonces el calculo de la relevancia se realiza mediante la combinación de los resultados anteriores.
 		\end{itemize}
 		\begin{figure}[H]
 				\centering
@@ -224,7 +224,9 @@ Lothar Soto Palma} % Author
 		\end{itemize}
 
 	\begin{thebibliography}{9}
-
+	
+		\bibitem{Searching the Internet}
+		\url{http://dx.doi.org/10.1109/MS.2012.39}
 		 \bibitem{Multi-tier architecture for Web Search Engines}
 		 \url{http://www.cwr.cl/la-web/2003/stamped/15_risvik_k-updates.pdf}
 		 \bibitem{The anatomy of a large-scale hypertextual Web search engine}
